templates/manifests/spinnaker-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: spin
  name: spin-ingress
  namespace: spinnaker
spec:
  rules:
  - http:
      paths:
        - backend:
            service: 
              name: spin-deck
              port: 
                number: 9000
          path: /
          pathType: Prefix
        - backend:
            service:
              name: spin-gate
              port:
                number: 8084
          path: /api/v1
          pathType: Prefix
